--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         .card .card-content {
             background: #424448;
             font-size: 19px;
+            color: #f4f4f4!important;
         }
       .leaflet-bottom {
           display: none!important;
