--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 <div class="container">
     <div class="page-header">
-        <h5 class="docs-heading">Application Development - Final Assignment</h5>
+        <h5 class="docs-heading">GPS TRCKS CATALOG</h5>
     </div>
 
   <div class="row">
