--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Leaflet.MultiOptionsPolyline Demo</title>
+    <title>Creating traks from points with speed based layout</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -49,7 +49,7 @@
 <body>
 <div class="container">
     <div class="page-header">
-        <h5 class="docs-heading">GPS TRCKS CATALOG</h5>
+        <h5 class="docs-heading">Creating traks from points with speed based layout</h5>
     </div>
 
   <div class="row">
